# airbnb-clone-backend

./: a.json  pyproject.toml  test.yaml
bookings/: models.py
bookings/migrations/: 0001_initial.py  0002_alter_booking_experience_alter_booking_room_and_more.py
categories/: Untitled-1.json  admin.py  models.py  urls.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_options.py
config/: settings.py  urls.py
direct_messages/: models.py
direct_messages/migrations/: 0001_initial.py  0002_alter_chattingroom_users_alter_message_room_and_more.py
experiences/: models.py  views.py
experiences/migrations/: 0001_initial.py  0002_remove_perk_detail_perk_details.py  0003_experience_category.py  0004_alter_experience_category_alter_experience_perks.py
houses/: admin.py  models.py
houses/migrations/: 0001_initial.py  0002_initial.py  0002_rename_price_house_price_per_night_and_more.py
medias/: models.py  views.py
medias/migrations/: 0001_initial.py  0002_alter_photo_experience_alter_photo_file_and_more.py
reviews/: admin.py  models.py
reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py
rooms/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
rooms/migrations/: 0001_initial.py  0002_room_name_alter_amenity_description.py  0003_alter_amenity_options.py  0004_room_category.py  0005_alter_room_amenities_alter_room_category_and_more.py
users/: admin.py  models.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_avatar.py  (+4 more)
wishlists/: views.py
(+2 files in other folders)
